--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-MONGODB_URL=mongodb://admin:admin_password@mongodb:27017/
-DATABASE_NAME=hms_db
+# MongoDB connection string
+MONGODB_URL=mongodb://admin:admin_password@hms_mongodb:27017/?replicaSet=rs0&authSource=admin
+
+# Database name
+DATABASE_NAME=hms_db_1
+
 JWT_SECRET_KEY=your_super_secret_key
 JWT_ALGORITHM=HS256
