changed mongodb file

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # MongoDB connection string
-MONGODB_URL=mongodb://admin:admin_password@hms_mongodb:27017/?replicaSet=rs0&authSource=admin
-
+MONGODB_URL=MONGODB_URL=mongodb+srv://akku:akku@cluster0.bsncfq0.mongodb.net/hms_db_1?retryWrites=true&w=majority&appName=Cluster0
 # Database name
 DATABASE_NAME=hms_db_1
 
